--- a/src/components/menu/pasta/Pasta.module.css
+++ b/src/components/menu/pasta/Pasta.module.css
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  padding: 20px;
-
+  padding: 10px;
 }
 
 .container {
@@ -11,7 +10,8 @@
   background-color: white;
   justify-content: space-around;
   width: 30%;
-  padding: 15px;
+  height: 170px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 3px 3px 10px gray;
   cursor: pointer;
@@ -24,11 +24,23 @@
 }
 
 .info {
-  width: 300px;
+  width: 100%;
+  height: 100%;
+}
+
+.info h3 {
+  margin-left: 15px;
+}
+
+.price {
+  color: green;
+  margin-left: 15px;
+  font-weight: bold;
 }
 
 .img {
   width: 200px;
-  height: 150px;
+  height: 90%;
+  margin-top: 10px;
   border-radius: 10px;
 }
