--- a/src/components/navigation/SideModal.css
+++ b/src/components/navigation/SideModal.css
@@ -1,3 +1,5 @@
+
+
 .modal-container {
   position: fixed;
   top: 0;
@@ -7,9 +9,11 @@
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease-in-out;
-  z-index: 10;
+  z-index: 1000;
   overflow-y: scroll;
   padding: 20px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .modal-container::-webkit-scrollbar {
@@ -95,6 +99,12 @@ li {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
+  padding: 10px;
+}
+
+.li-box:hover{
+  background-color: #f2fdf2;
+  cursor: pointer;
 }
 
 .li-box_description {
