--- a/src/components/navigation/Navbar.module.css
+++ b/src/components/navigation/Navbar.module.css
@@ -4,6 +4,26 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+
+}
+
+.ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.li {
+  cursor: pointer;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  background-color: gainsboro;
+  border-radius: 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.li:hover {
+  color: red;
 }
 
 .cart {
