--- a/src/components/navigation/SideModal.css
+++ b/src/components/navigation/SideModal.css
@@ -1,3 +1,15 @@
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* You can adjust the opacity here */
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 .modal-container {
@@ -34,7 +46,10 @@
 }
 .modal-container.open {
   transform: translateX(-600px);
+  
 }
+
+
 
 .close-button {
   position: absolute;
