--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
-.Modal{
-    width: 50%;
-    height: 30%;
-    background-color: white;
-    margin: 0 auto;
-    margin-top: 100px;
+.Modal {
+  width: 50%;
+  height: 30%;
+  background-color: white;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
+html {
+  scroll-behavior: smooth;
 
-html { scroll-behavior: smooth; }
+}
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
