--- a/src/components/menu/Pasta.module.css
+++ b/src/components/menu/Pasta.module.css
@@ -17,7 +17,23 @@
   transition: all 1s;
   margin-top: 20px;
   margin: 10px;
+  
 }
+
+
+@media (max-width: 768px) {
+  .box {
+    padding: 5px;
+  }
+
+  .container {
+    width: 45%;
+    height: 200px;
+    margin: 5px;
+  }
+}
+
+
 
 .container:hover {
   transform: scale(1.05);
@@ -30,6 +46,8 @@
 
 .info h3 {
   margin-left: 15px;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .price {
@@ -39,8 +57,13 @@
 }
 
 .img {
-  width: 200px;
-  height: 90%;
+  width: 170px;
+  height: 80%;
   margin-top: 10px;
   border-radius: 10px;
+}
+
+.imgDrinks {
+  width: 200px;
+  height: 120px;
 }
