--- a/src/pages/CheckoutPage.module.css
+++ b/src/pages/CheckoutPage.module.css
@@ -17,12 +17,11 @@
 .orderContainer {
   background-color: rgb(247, 250, 247);
   width: 100%;
-  height: 450px;
+  height: 550px;
   padding: 20px;
   overflow-y: scroll;
   border-radius: 10px;
 }
-
 
 .orderContainer::-webkit-scrollbar {
   width: 11px;
@@ -42,28 +41,52 @@
   background: #555;
 }
 
+.back {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  color: green;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.ul {
+  width: 100%;
+}
+
 .liBox {
   display: flex;
+  justify-content: space-between;
 }
 
 .form {
-  width: 100%;
+  width: 75%;
   font-size: 20px;
 }
 
 .form input {
-  width: 80%;
+  width: 100%;
   height: 40px;
+  border-radius: 10px;
+  font-size: 20px;
+  padding-left: 5px;
+  border: 2px solid #ccc;
+  transition: border-color 0.2s ease-in-out;
+}
+.form input:focus {
+  outline: none;
+  border-color: #979ec9;
 }
 
 .formGroup {
-  width: 70%;
+  width: 85%;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
 }
 .amount {
-  width: 50%;
+  width: 70%;
   height: fit-content;
   margin-top: 20px;
   background-color: green;
@@ -77,6 +100,8 @@
 
 .form label {
   margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .form button {
@@ -88,8 +113,15 @@
   color: green;
   background-color: white;
 }
+
 .iframe {
   width: 100%;
   margin-top: 20px;
   border: none;
+}
+
+.error {
+  color: red;
+  margin-top: 3px;
+  font-size: 16px;
 }
