--- a/src/components/navigation/Navbar.module.css
+++ b/src/components/navigation/Navbar.module.css
@@ -4,12 +4,13 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-
+  width: 95vw;
 }
 
 .ul {
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .li {
@@ -37,6 +38,10 @@
   align-items: center;
   cursor: pointer;
   font-weight: 500;
+}
+.cart div {
+  display: flex;
+  align-items: center;
 }
 
 .number {
@@ -69,3 +74,26 @@
   height: 100px;
   margin-right: 15px;
 }
+
+@media (max-width: 810px) {
+  .cart {
+    position: fixed;
+    bottom: 20px;
+    left: 5px;
+    width: 90vw;
+    height: 10px;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 500px) {
+  .cart {
+    position: fixed;
+    bottom: 20px;
+    left: 5px;
+    width: 87vw;
+    height: 10px;
+    justify-content: space-between;
+  }
+}
+
