--- a/src/components/navigation/SideModal.css
+++ b/src/components/navigation/SideModal.css
@@ -11,7 +11,6 @@
   align-items: center;
 }
 
-
 .modal-container {
   position: fixed;
   top: 0;
@@ -46,10 +45,7 @@
 }
 .modal-container.open {
   transform: translateX(-600px);
-  
 }
-
-
 
 .close-button {
   position: absolute;
@@ -117,7 +113,7 @@ li {
   padding: 10px;
 }
 
-.li-box:hover{
+.li-box:hover {
   background-color: #f2fdf2;
   cursor: pointer;
 }
@@ -147,7 +143,22 @@ li {
   font-weight: 500;
 }
 
-.cart div {
+.checkoutCart{
+  position: absolute;
+  bottom: 40px;
+  width:  85%;
+  height: 20px;
+  background-color: green;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  font-weight: 500;
+}
+.checkoutCart div{
   display: flex;
   align-items: center;
 }
@@ -165,15 +176,12 @@ li {
   height: 30px;
 }
 
-
-
-
-.quantity{
+.quantity {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(230, 248, 230);
-  padding: 20px;
+  padding: 20px 30px;
   border-radius: 7px;
   width: 25%;
   height: 20px;
@@ -182,7 +190,7 @@ li {
   color: green;
 }
 
-.quantity div{
+.quantity div {
   cursor: pointer;
 }
 
@@ -194,11 +202,78 @@ li {
   background-color: white;
   color: green;
   font-size: 25px;
-  padding:7px;
+  padding: 7px;
   margin: 0 20px;
   border-radius: 50%;
   cursor: pointer;
   height: 30px;
   width: 30px;
+}
 
+@media (max-width: 810px) {
+  .modal-container {
+    width: 60%;
+  }
+ 
+    
+.checkoutCart {
+  width: 80%;
+  bottom: 50px;
+}
+
+  
+}
+
+@media (max-width: 600px) {
+  .close-button {
+    top: 10;
+    right: 20px;
+  }
+  .modal-container {
+    right: -600px;
+    width: 90%;
+    height: 100%;
+    padding: 30px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+  }
+
+  .li-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    padding: 10px;
+    flex-direction: column;
+  }
+
+  .quantity {
+    padding: 10px 20px;
+    border-radius: 7px;
+    width: 60%;
+    height: 20px;
+    font-weight: 500;
+    font-size: 21px;
+    color: green;
+    margin-top: 10px;
+  }
+
+      
+.checkoutCart {
+  width: 80%;
+  bottom: 70px;
+}
+
+}
+
+@media (max-width: 450px) {
+  .quantity {
+    width: 70%;
+  }
+}
+
+@media (max-width: 450px) {
+  .quantity {
+    width: 80%;
+  }
 }
