--- a/src/components/menu/Pasta.module.css
+++ b/src/components/menu/Pasta.module.css
@@ -8,6 +8,7 @@
   display: flex;
   background-color: white;
   justify-content: space-around;
+  align-items: center;
   width: 30%;
   height: 200px;
   padding: 17px 10px;
@@ -19,12 +20,14 @@
   margin: 10px;
 }
 
-
 .container:hover {
   transform: scale(1.05);
 }
 
 .info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 90%;
   height: 100%;
   padding-right: 10px;
@@ -54,8 +57,6 @@
   height: 120px;
 }
 
-
-
 @media (max-width: 1246px) {
   .box {
     padding: 5px;
@@ -67,8 +68,6 @@
     margin: 5px;
   }
 }
-
-
 
 @media (max-width: 810px) {
   .box {
@@ -83,27 +82,33 @@
 }
 
 @media (max-width: 480px) {
-
+  .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .container {
-    width: 95%;
-    height: 200px;
+    width: 80%;
+    height: 230px;
     margin: 5px;
     margin-top: 20px;
   }
- 
 }
 
 @media (max-width: 410px) {
-
   .container {
-    width: 95%;
-    height: 250px;
+    width: 80%;
+    height: 300px;
     margin: 5px;
     margin-top: 20px;
+    padding-bottom: 35px;
     flex-direction: column;
   }
+  .info {
+    align-items: center;
+  }
 
-  .img{
+  .img {
     width: 180px;
     height: 150px;
     margin: 0 auto;
