--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .Main {
   background-color: rgb(247, 247, 247);
   padding: 10px;
@@ -25,7 +29,7 @@
 /*MODAL STYLING*/
 
 .Modal {
-  width: 550px;
+  width: 35%;
   height: fit-content;
   background-color: white;
   margin: 0 auto;
@@ -48,16 +52,7 @@
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
-.closeModalBtn {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  border-radius: 50%;
-  padding: 7px;
-  font-size: 25px;
-  font-weight: 600;
-  cursor: pointer;
-}
+
 
 .orderBox {
   display: flex;
@@ -141,17 +136,6 @@
     width: 80%;
     justify-content: center;
     margin-left: 0;
-  }
-
-  .closeModalBtn {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    border-radius: 50%;
-    padding: 7px;
-    font-size: 18px;
-    font-weight: 600;
-    cursor: pointer;
   }
 }
 
