--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -30,7 +30,6 @@ a {
   text-decoration: none;
 }
 
-
 .headings {
   display: flex;
   align-items: center;
@@ -44,4 +43,24 @@ a {
   width: 100px;
   height: 100px;
   margin-right: 15px;
+}
+
+.authButtons {
+  display: flex;
+  align-items: center;
+}
+
+.authButtons button {
+  margin-left: 10px;
+  padding: 12px 25px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.authButtons button:hover {
+  background-color: #0056b3;
 }
