--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -67,6 +67,7 @@ a {
 
 .profileButton {
   position: relative;
+  margin-left: 20px;
 }
 
 .profilePicture {
@@ -75,12 +76,13 @@ a {
   border-radius: 50%;
   object-fit: cover;
   cursor: pointer;
+  background-color: white;
 }
 
 .dropdown {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 8px;
