--- a/src/pages/edit-profile-page/editProfilePage.module.css
+++ b/src/pages/edit-profile-page/editProfilePage.module.css
@@ -1,7 +1,8 @@
 .container {
   max-width: 400px;
   margin: 0 auto;
-  padding: 20px;
+  margin-top: 100px;
+  padding: 30px;
   border: 1px solid #ccc;
   border-radius: 8px;
   background-color: #fff;
