Edit profile logic, create new password

--- a/src/pages/edit-profile-page/editProfilePage.module.css
+++ b/src/pages/edit-profile-page/editProfilePage.module.css
@@ -12,6 +12,11 @@
   margin-bottom: 15px;
 }
 
+.checkboxLabel {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 label {
   font-weight: bold;
 }
