--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -1,10 +1,19 @@
+.Navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
 .nav {
   height: fit-content;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  width: 95vw;
+  width: 50vw;
 }
 
 .ul {
