--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,18 @@ a {
   text-decoration: none;
   color: black;
 }
-a:hover {
-  color: red;
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display&display=swap');
+
+* {
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+}
+
+button {
+  background-color: #2375cd;
+}
+
+button:hover {
+  background-color: #2375cd;
+  color: white;
 }
