--- a/src/components/buttons/close-button/CloseButton.module.css
+++ b/src/components/buttons/close-button/CloseButton.module.css
@@ -6,7 +6,14 @@
   padding: 7px;
   font-size: 25px;
   font-weight: 600;
+  width: 40px;
+  height: 50px;
+  background-color: black;
   cursor: pointer;
+}
+
+.closeModalBtn:hover{
+  background-color: black;
 }
 
 @media (max-width: 700px) {
