--- a/src/components/navigation/cart/Cart.module.css
+++ b/src/components/navigation/cart/Cart.module.css
@@ -1,7 +1,7 @@
 .cart {
   width: fit-content;
   height: 20px;
-  background-color: green;
+  background-color: #2375cd;
   color: white;
   padding: 20px;
   border-radius: 10px;
@@ -22,7 +22,7 @@
   align-items: center;
   font-weight: 500;
   font-size: 21px;
-  color: green;
+  color: #2375cd;
   border-radius: 50%;
   width: 30px;
   height: 30px;
