--- a/src/components/navigation/side-modal/SideModal.css
+++ b/src/components/navigation/side-modal/SideModal.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* You can adjust the opacity here */
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 999;
   display: flex;
   justify-content: center;
@@ -114,7 +114,7 @@ li {
 }
 
 .li-box:hover {
-  background-color: #f2fdf2;
+  background-color: #f2fcfd;
   cursor: pointer;
 }
 
@@ -132,7 +132,7 @@ li {
   left: 10px;
   width: 90%;
   height: 15px;
-  background-color: green;
+  background-color: #2375cd;
   color: white;
   padding: 20px;
   border-radius: 8px;
@@ -148,7 +148,7 @@ li {
   bottom: 50px;
   width: 85%;
   height: 20px;
-  background-color: green;
+  background-color: #2375cd;
   color: white;
   padding: 20px;
   border-radius: 10px;
@@ -170,7 +170,7 @@ li {
   align-items: center;
   font-weight: 500;
   font-size: 21px;
-  color: green;
+  color: #2375cd;
   border-radius: 50%;
   width: 30px;
   height: 30px;
@@ -180,14 +180,14 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(230, 248, 230);
+  background-color: rgb(178, 200, 203);
   padding: 20px 30px;
   border-radius: 7px;
   width: 25%;
   height: 20px;
   font-weight: 500;
   font-size: 21px;
-  color: green;
+  color: #2375cd;
 }
 
 .quantity div {
@@ -200,7 +200,7 @@ li {
   align-items: center;
   border: none;
   background-color: white;
-  color: green;
+  color: #2375cd;
   font-size: 25px;
   padding: 7px;
   margin: 0 20px;
@@ -232,7 +232,7 @@ li {
 
 .loginPrompt button {
   padding: 8px 16px;
-  background-color: #4caf50;
+  background-color: rgb(178, 200, 203);
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -241,9 +241,8 @@ li {
 }
 
 .loginPrompt button:hover {
-  background-color: #45a049;
+  background-color: #2375cd;
 }
-
 
 @media (max-width: 810px) {
   .modal-container {
@@ -286,7 +285,7 @@ li {
     height: 20px;
     font-weight: 500;
     font-size: 21px;
-    color: green;
+    color: #2375cd;
     margin-top: 10px;
   }
 
@@ -299,7 +298,6 @@ li {
     }
   }
 }
-
 
 @media (max-width: 450px) {
   .quantity {
