--- a/src/pages/checkout-page/CheckoutPage.module.css
+++ b/src/pages/checkout-page/CheckoutPage.module.css
@@ -45,7 +45,7 @@
   display: flex;
   align-items: center;
   margin: 0;
-  color: green;
+  color: #2375cd;
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
@@ -95,7 +95,7 @@
   width: 70%;
   height: fit-content;
   margin-top: 20px;
-  background-color: green;
+  background-color: #2375cd;
   color: white;
   border-radius: 8px;
   display: flex;
@@ -116,7 +116,7 @@
   font-size: 20px;
   cursor: pointer;
   border: none;
-  color: green;
+  color: #2375cd;
   background-color: white;
 }
 
