--- a/src/pages/create-account-page/CreateAccountPage.module.css
+++ b/src/pages/create-account-page/CreateAccountPage.module.css
@@ -9,7 +9,7 @@
   margin-bottom: 20px;
   position: absolute;
   left: 20px;
-  color: #007bff;
+  color: #2375cd;
   text-decoration: none;
   cursor: pointer;
   font-weight: bold;
@@ -39,7 +39,7 @@
 .button {
   padding: 10px 20px;
   font-size: 18px;
-  background-color: #007bff;
+  background-color: #2375cd;
   color: #fff;
   border: none;
   cursor: pointer;
