--- a/src/pages/edit-profile-page/editProfilePage.module.css
+++ b/src/pages/edit-profile-page/editProfilePage.module.css
@@ -13,7 +13,7 @@
   position: absolute;
   top: 20px;
   left: 20px;
-  color: #007bff;
+  color: #2375cd;
   text-decoration: none;
   cursor: pointer;
   font-weight: bold;
