--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -65,14 +65,14 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(230, 248, 230);
+  background-color: rgb(178, 200, 203);
   padding: 20px;
   border-radius: 7px;
   width: 20%;
   height: 20px;
   font-weight: 500;
   font-size: 21px;
-  color: green;
+  color: #2375cd;
 }
 
 .quantity button {
@@ -81,7 +81,7 @@ html {
   align-items: center;
   border: none;
   background-color: white;
-  color: green;
+  color: #2375cd;
   font-size: 25px;
   padding: 7px;
   margin: 0 20px;
@@ -98,7 +98,7 @@ html {
 .totalAmount {
   display: flex;
   width: 60%;
-  background-color: green;
+  background-color: #2375cd;
   color: white;
   padding: 20px;
   border-radius: 10px;
