--- a/src/components/buttons/close-button/CloseButton.module.css
+++ b/src/components/buttons/close-button/CloseButton.module.css
@@ -12,8 +12,18 @@
   cursor: pointer;
 }
 
-.closeModalBtn:hover{
+.closeModalBtn:hover {
   background-color: black;
+}
+
+.smallCloseButton {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 50%;
+  padding: 7px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 @media (max-width: 700px) {
