--- a/src/pages/checkout-page/CheckoutPage.module.css
+++ b/src/pages/checkout-page/CheckoutPage.module.css
@@ -92,7 +92,7 @@
   flex-direction: column;
 }
 .amount {
-  width: 70%;
+  width: 30%;
   height: fit-content;
   margin-top: 20px;
   background-color: #2375cd;
@@ -110,14 +110,19 @@
   font-size: 18px;
 }
 
-.form button {
+.form button,.form button:disabled {
   padding: 10px;
   border-radius: 10px;
   font-size: 20px;
   cursor: pointer;
   border: none;
-  color: #2375cd;
-  background-color: white;
+  color: white;
+  background-color: #2375cd;
+  margin-top: 20px;
+}
+
+.form button:disabled {
+  background-color: #84afdd;
 }
 
 .iframe {
@@ -131,6 +136,98 @@
   margin-top: 3px;
   font-size: 16px;
 }
+
+.paymentModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.paymentModal div {
+  display: flex;
+}
+
+.paymentModal h2 {
+  margin: 0 0 10px 0;
+}
+
+.paymentModal button {
+  padding: 8px 16px;
+  background-color: #2375cd;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.cardPaymentForm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 600px;
+  transform: translate(-50%, -50%);
+  padding: 10px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cardPaymentForm form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cardPaymentForm form div {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+  margin-bottom: 50px;
+  margin-right: 40px;
+}
+
+.cardPaymentForm form div label {
+  font-weight: bold;
+}
+
+.cardPaymentForm form div input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.cardPaymentForm form button {
+  position: absolute;
+  margin: 0 auto;
+  bottom: 10px;
+  padding: 8px 16px;
+  background-color: #2375cd;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
 
 @media (max-width: 950px) {
   .container {
