--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -113,6 +113,87 @@ html {
   margin: 0 5px;
 }
 
+.authButtons {
+  width: fit-content;
+  border: 4px solid #2375cd;
+  border-radius: 10px;
+  margin-left: 20px;
+}
+
+.authButtons button {
+  margin: 10px;
+  padding: 12px 25px;
+  font-size: 16px;
+  width: 100px;
+  color: #fff;
+  background-color: #2375cd;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.authButtons button:hover {
+  background-color: #0056b3;
+}
+
+.profileButton {
+  position: relative;
+}
+
+.profilePicture {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+  background-color: white;
+}
+
+.dropdown {
+  position: absolute;
+  top: 105%;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 8px;
+  display: none;
+}
+
+.dropdown li {
+  list-style: none;
+  width: 150px;
+}
+
+.dropdown a,
+.dropdown button {
+  display: block;
+  padding: 8px;
+  text-decoration: none;
+  color: #333;
+}
+
+.dropdown a:hover,
+.dropdown button:hover {
+  background-color: #f3f3f3;
+}
+
+.profileButton:hover .dropdown {
+  display: block;
+}
+
+.dropdown .logoutButton {
+  color: white;
+}
+.ModalLogin {
+  width: 35%;
+  height: fit-content;
+  background-color: white;
+  margin: 0 auto;
+  border-radius: 10px;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
 @media (max-width: 810px) {
   .Modal {
     width: 80%;
