--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 30px;
   background-color: black;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -10,8 +10,8 @@
 .nav {
   height: fit-content;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 10px;
   width: 50vw;
 }
@@ -19,12 +19,13 @@
 .ul {
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .li {
   cursor: pointer;
-  padding: 0.5rem;
-  margin: 0.5rem;
+  padding: 0.3rem;
+  margin: 0.3rem;
   height: 30px;
   text-align: center;
   width: 100px;
@@ -47,91 +48,10 @@ a {
   align-items: center;
 }
 
-.headings h2,
-.headings h4 {
-  margin: 0;
-}
 .headings img {
   width: 200px;
   height: 150px;
+  margin: 20px;
   border-radius: 10px;
 }
 
-.authButtons {
-  display: flex;
-  align-items: center;
-  border: 4px solid #2375cd;
-  border-radius: 10px;
-  margin-left: 20px;
-}
-
-.authButtons button {
-  margin: 10px;
-  padding: 12px 25px;
-  font-size: 16px;
-  width: 100px;
-  color: #fff;
-  background-color: #2375cd;
-  border: none;
-  border-radius: 7px;
-  cursor: pointer;
-}
-
-.authButtons button:hover {
-  background-color: #0056b3;
-}
-
-.profileButton {
-  position: relative;
-}
-
-.profilePicture {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
-  cursor: pointer;
-  background-color: white;
-}
-
-.dropdown {
-  position: absolute;
-  top: 105%;
-  left: 0;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 8px;
-  display: none;
-}
-
-.dropdown li {
-  list-style: none;
-  width: 150px;
-}
-
-.dropdown a,
-.dropdown button {
-  display: block;
-  padding: 8px;
-  text-decoration: none;
-  color: #333;
-}
-
-.dropdown a:hover,
-.dropdown button:hover {
-  background-color: #f3f3f3;
-}
-
-.profileButton:hover .dropdown {
-  display: block;
-}
-
-.Modal {
-  width: 35%;
-  height: fit-content;
-  background-color: white;
-  margin: 0 auto;
-  border-radius: 10px;
-  margin-top: 20px;
-  padding-bottom: 20px;
-}
