--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -4,7 +4,9 @@ html {
 
 .Main {
   background-color: rgb(247, 247, 247);
-  padding: 10px;
+  padding:10px;
+  padding-top: 80px;
+  position: relative;
 }
 
 .ul {
@@ -114,6 +116,9 @@ html {
 }
 
 .authButtons {
+  position: absolute;
+  right: 30px;
+  top: 30px;
   width: fit-content;
   border: 4px solid #2375cd;
   border-radius: 10px;
