--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -41,6 +41,7 @@
 @media (max-width: 500px) {
   .cart {
     position: fixed;
+    z-index: 2;
     bottom: 20px;
     left: 5px;
     width: 87vw;
