--- a/src/components/menu/ment-item/MenuItem.module.css
+++ b/src/components/menu/ment-item/MenuItem.module.css
@@ -88,8 +88,9 @@
     align-items: center;
   }
   .container {
-    width: 80%;
-    height: 230px;
+    width: 85%;
+    padding: 20px;
+    height: 250px;
     margin: 5px;
     margin-top: 20px;
   }
@@ -98,7 +99,7 @@
 @media (max-width: 410px) {
   .container {
     width: 80%;
-    height: 300px;
+    height: 340px;
     margin: 5px;
     margin-top: 20px;
     padding-bottom: 35px;
