--- a/src/pages/create-account-page/CreateAccountPage.module.css
+++ b/src/pages/create-account-page/CreateAccountPage.module.css
@@ -9,6 +9,7 @@
   margin-bottom: 20px;
   position: absolute;
   left: 20px;
+  top: 20px;
   color: #2375cd;
   text-decoration: none;
   cursor: pointer;
@@ -48,7 +49,7 @@
 
 @media (max-width: 768px) {
   .container {
-    padding: 20px;
+    padding: 50px;
   }
 
   .input {
