--- a/src/pages/edit-profile-page/editProfilePage.module.css
+++ b/src/pages/edit-profile-page/editProfilePage.module.css
@@ -75,3 +75,11 @@ button {
 button:hover {
   background-color: #45a049;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 50px;
+  }
+
+ 
+}
