--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -170,9 +170,9 @@ a {
   }
 
   .li {
-    width: 100%;
+    width: 30%;
     text-align: center;
-    margin: 10px 0;
+    margin: 10px;
     padding: 6px;
   }
 
@@ -211,8 +211,9 @@ a {
 
   .ul.active {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    width: 90%;
   }
 }
