--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -103,6 +103,44 @@ html {
   margin: 0 5px;
 }
 
+.welcomeModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  text-align: center;
+  z-index: 9999;
+}
+
+.welcomeModal h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.welcomeModal p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.welcomeModal button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+.WelcomeModal button:hover {
+  background-color: #0056b3;
+}
 @media (max-width: 1010px) {
   .Modal {
     width: 70%;
