new user discount logic

--- a/src/components/navigation/navbar/side-modal/SideModal.module.css
+++ b/src/components/navigation/navbar/side-modal/SideModal.module.css
@@ -244,6 +244,9 @@ li {
   background-color: #2375cd;
 }
 
+.discountMessage {
+  color: red;
+}
 @media (max-width: 810px) {
   .modalContainer {
     width: 60%;
