--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -29,7 +29,7 @@ html {
 }
 
 .searchInput {
-  width: 60%;
+  width: 40%;
 }
 
 /*MODAL STYLING*/
@@ -112,14 +112,16 @@ html {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  max-width: 400px;
+  width: 30%;
+  height: fit-content;
   text-align: center;
   z-index: 9999;
 }
 
 .welcomeModal h2 {
   font-size: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  color:red;
 }
 
 .welcomeModal p {
