--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -140,7 +140,7 @@ html {
   transition: background-color 0.3s;
 }
 
-.WelcomeModal button:hover {
+.welcomeModal button:hover {
   background-color: #0056b3;
 }
 @media (max-width: 1010px) {
