--- a/src/pages/checkout-page/CheckoutPage.module.css
+++ b/src/pages/checkout-page/CheckoutPage.module.css
@@ -1,7 +1,3 @@
-.body {
-  padding: 0 20px;
-}
-
 .nav {
   display: flex;
 }
@@ -12,6 +8,7 @@
 }
 .container {
   display: flex;
+  margin-left:10px;
 }
 
 .orderContainer {
@@ -19,6 +16,7 @@
   width: 100%;
   height: 550px;
   padding: 20px;
+  margin-right:10px;
   overflow-y: scroll;
   border-radius: 10px;
 }
