--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -20,10 +20,10 @@ body {
 }
 
 .ulBox {
-  display:flex;
-  justify-content:center;
+  display: flex;
+  justify-content: center;
   width: 100vw;
-  animation: fade-in-ul .4s ease-in;
+  animation: fade-in-ul 0.4s ease-in;
 }
 .ul {
   display: none;
@@ -197,7 +197,7 @@ a {
     justify-content: center;
     align-items: center;
     padding: 10px 10px;
-    background-color: black;
+    background-color: #333;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     width: 100%;
   }
@@ -212,11 +212,23 @@ a {
     width: 100vw;
   }
 
+  .headings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 220px;
+    width: 100%;
+    margin-left: 20px;
+  }
   .headings img {
     margin: 0;
     width: 150px;
     height: 100px;
     border-radius: 10px;
+  }
+  .menuToggle {
+    margin-bottom: 5px;
   }
 
   .li {
