--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -155,6 +155,12 @@ html {
     margin-left: 0;
     padding-left: 0;
   }
+
+  
+.welcomeModal {
+  width: 65%;
+}
+
 }
 
 @media (max-width: 700px) {
