--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -7,6 +7,7 @@ html {
   padding: 10px;
   padding-top: 40px;
   position: relative;
+  min-height: 60vh;
 }
 
 .ul {
@@ -27,7 +28,6 @@ html {
 .li:hover {
   color: red;
 }
-
 
 /*MODAL STYLING*/
 
@@ -118,7 +118,7 @@ html {
 .welcomeModal h2 {
   font-size: 24px;
   margin-bottom: 20px;
-  color:red;
+  color: red;
 }
 
 .welcomeModal p {
@@ -156,11 +156,9 @@ html {
     padding-left: 0;
   }
 
-  
-.welcomeModal {
-  width: 65%;
-}
-
+  .welcomeModal {
+    width: 65%;
+  }
 }
 
 @media (max-width: 700px) {
