--- a/src/pages/reviews-page/ReviewsPage.module.css
+++ b/src/pages/reviews-page/ReviewsPage.module.css
@@ -1,19 +1,29 @@
+.container{
+  padding:30px;
+}
+
 .reviewList {
+  display:flex;
+  flex-wrap:wrap;
+  width:100%;
   list-style: none;
   padding: 20px;
 }
 
 .reviewItem {
   border: 1px solid #ccc;
-  margin: 10px 0;
+  margin: 10px 10px;
   padding: 10px;
   background-color: #f9f9f9;
+  width:30%;
+  height:300px;
 }
 
 .pagination {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 30px;
 }
 
 .pagination button {
