--- a/src/components/navigation/navbar/Navbar.module.css
+++ b/src/components/navigation/navbar/Navbar.module.css
@@ -172,7 +172,6 @@ a {
 
 .rightSide {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -264,5 +263,8 @@ a {
     justify-content: center;
     flex-wrap: wrap;
     width: 90%;
+  }
+  .rightSide {
+    flex-direction: column;
   }
 }
