--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -84,12 +84,12 @@ html {
 
 .heroSection {
   position: relative;
-  height: 400px; 
+  height: 400px;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #f7f7f7; 
+  background-color: #f7f7f7;
   margin-bottom: 100px;
 }
 
@@ -114,6 +114,9 @@ html {
   width: 50%;
   height: 100%;
   object-fit: cover;
+}
+.searchInput {
+  width: 50%;
 }
 .totalAmount {
   display: flex;
