--- a/src/pages/home-page/HomePage.module.css
+++ b/src/pages/home-page/HomePage.module.css
@@ -198,6 +198,20 @@ html {
   .welcomeModal {
     width: 65%;
   }
+  .heroSection {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .heroContent {
+    text-align: center;
+    padding: 20px;
+  }
+
+  .heroImage {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media (max-width: 700px) {
